<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:scaleType="fitXY"
            android:src="@drawable/placeholder"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/title_text_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text=""/>
                    <TextView
                        android:id="@+id/subtitle_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textStyle="italic"
                        android:textColor="@color/black"
                        android:text=""/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/nutri_score_image"
                    android:layout_width="78dp"
                    android:layout_height="42dp"
                    android:src="@drawable/nutri_score_a"/>
            </LinearLayout>

            <LinearLayout
                android:paddingTop="15dp"
                android:id="@+id/barcode_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/barcode_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barcode_label"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/barcode_value"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quantity_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_label"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/quantity_value"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/selled_in_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/selled_in_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selled_in_label"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/selled_in_value"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>

            <TextView
                android:id="@+id/ingredient_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredient_label"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/ingredient_value"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text=""/>

            <LinearLayout
                android:id="@+id/allergenic_substance_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="15dp"

                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/allergenic_substance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allergenic_substance_label"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/allergenic_substance_value"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/additives_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="15dp"

                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/additives_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/additives_label"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/additives_value"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>